# disPathCuration

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: chunking.md  matching.md  pipeline.md
scripts/: build_disease_index.py  run_judge.py  run_matcher.py
src/dispathcuration/: __init__.py  chunks.py  config.py  data.py  diseases.py  evaluate.py  judge.py  matcher.py  normalise.py
tests/: test_chunks.py  test_judge.py  test_matcher.py  test_normalise.py
