[project]
name = "dispathcuration"
version = "0.1.0"
description = "Finding disease names in pathway labels"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pyarrow>=15",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dispathcuration"]
